--- a/app/src/main/res/drawable/bg_ripple_black_button.xml
+++ b/app/src/main/res/drawable/bg_ripple_black_button.xml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/button_black">
+    android:color="@color/ripple_button_black">
     <item android:id="@android:id/mask">
+        <shape android:shape="rectangle">
+            <solid android:color="@color/ripple_button_black" />
+            <corners android:radius="8dp" />
+        </shape>
+    </item>
+
+    <item android:id="@android:id/background">
         <shape android:shape="rectangle">
             <solid android:color="@color/button_black" />
             <corners android:radius="8dp" />
