--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,7 +20,6 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/login_button"
-        style="@style/Widget.MaterialComponents.Button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,6 +30,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:background="@drawable/bg_ripple_black_button"
         android:textColor="@color/white"
+        android:layout_marginTop="48dp"
         android:text="Sign In"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
