--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,13 @@
 
     <color name="button_black">#000000</color>
     <color name="ripple_button_black">#848484</color>
+
+    <color name="color_text">#050505</color>
+    <color name="color_text_gray">#6A6D7D</color>
+
+    <color name="color_background">#EDEEF3</color>
+
+    <color name="color_icon_repository">#935CD9</color>
+    <color name="color_icon_organisation">#FF7E00</color>
+    <color name="color_icon_starred">#FFC500</color>
 </resources>
