--- a/app/src/main/res/menu/menu_bottom_bar.xml
+++ b/app/src/main/res/menu/menu_bottom_bar.xml
@@ -5,11 +5,11 @@
         android:title="Home" />
     <item android:id="@+id/menu_notification"
         android:icon="@drawable/ic_menu_notification"
-        android:title="Home" />
+        android:title="Notifications" />
     <item android:id="@+id/menu_explore"
         android:icon="@drawable/ic_menu_explore"
-        android:title="Home" />
+        android:title="Explore" />
     <item android:id="@+id/menu_profile"
         android:icon="@drawable/ic_menu_profile"
-        android:title="Home" />
+        android:title="Profile" />
 </menu>
