:bento: Started implementing ProfileFragmentViewModel.kt

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -58,7 +58,8 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <include layout="@layout/view_profile_header" />
+                <include android:id="@+id/profile_header"
+                    layout="@layout/view_profile_header" />
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
