:sparkles: Working PinnedRepositoryAdapter.kt

--- a/app/src/main/res/layout/view_pinned_repository.xml
+++ b/app/src/main/res/layout/view_pinned_repository.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="240dp"
-    android:layout_height="120dp"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    app:cardCornerRadius="8dp"
-    android:elevation="4dp">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="16dp">
+        android:layout_width="300dp"
+        android:layout_height="150dp"
+        android:layout_marginEnd="16dp"
+        android:padding="16dp"
+        android:background="@drawable/bg_pinned_repository">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/repo_user_image"
@@ -21,20 +19,85 @@
             tools:background="@color/button_black"/>
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/repo_user"
+            android:id="@+id/repo_owner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@id/repo_user_image"
+            app:layout_constraintTop_toTopOf="@id/repo_user_image"
+            app:layout_constraintBottom_toBottomOf="@id/repo_user_image"
+            android:includeFontPadding="false"
+            android:textSize="16sp"
+            android:layout_marginStart="10dp"
             tools:text="surajsau"/>
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/repo_user"
+            android:id="@+id/repo_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="surajsau"/>
+            app:layout_constraintTop_toBottomOf="@id/repo_owner"
+            android:textColor="@color/color_text"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:layout_marginTop="4dp"
+            tools:text="Jisho"/>
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/repo_description"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/repo_title"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:textColor="@color/color_text"
+            android:textSize="16sp"
+            tools:text="Japanese dictionary app"
+            android:maxLines="2"
+            android:ellipsize="end"/>
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/icon_star"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_star"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/star_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="8"
+            app:layout_constraintStart_toEndOf="@id/icon_star"
+            app:layout_constraintTop_toTopOf="@id/icon_star"
+            app:layout_constraintBottom_toBottomOf="@id/icon_star"
+            android:textSize="16sp"
+            android:textColor="@color/color_text_gray"
+            android:includeFontPadding="false"
+            android:layout_marginStart="12dp"/>
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/icon_language"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_language"
+            app:layout_constraintStart_toEndOf="@id/star_count"
+            app:layout_constraintTop_toTopOf="@id/icon_star"
+            app:layout_constraintBottom_toBottomOf="@id/icon_star"
+            android:layout_marginStart="12dp"/>
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/language"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="Kotlin"
+            app:layout_constraintStart_toEndOf="@id/icon_language"
+            app:layout_constraintTop_toTopOf="@id/icon_star"
+            app:layout_constraintBottom_toBottomOf="@id/icon_star"
+            android:textSize="16sp"
+            android:textColor="@color/color_text_gray"
+            android:includeFontPadding="false"
+            android:layout_marginStart="12dp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.cardview.widget.CardView>
+</layout>
