--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -66,7 +66,7 @@
                     android:layout_height="wrap_content"
                     android:background="@color/white"
                     android:layout_marginTop="24dp"
-                    android:padding="16dp">
+                    android:layout_marginBottom="24dp">
 
                     <androidx.appcompat.widget.AppCompatTextView
                         android:id="@+id/pinned_text"
@@ -74,11 +74,26 @@
                         app:layout_constraintTop_toTopOf="parent"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="16dp"
                         android:text="Pinned"
                         android:textSize="16sp"
                         app:drawableLeftCompat="@drawable/ic_pinned"
                         android:drawablePadding="12dp"
                         android:textColor="@color/color_text"/>
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/pinned_repo_list"
+                        android:layout_width="match_parent"
+                        android:layout_height="150dp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/pinned_text"
+                        android:layout_marginTop="16dp"
+                        android:paddingStart="16dp"
+                        android:paddingEnd="16dp"
+                        android:clipToPadding="false"
+                        tools:listitem="@layout/view_pinned_repository"
+                        tools:ignore="RtlSymmetry" />
 
                     <androidx.appcompat.widget.AppCompatImageView
                         android:id="@+id/ic_repository"
@@ -86,8 +101,9 @@
                         android:layout_height="30dp"
                         android:background="@drawable/bg_icon_repository"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/pinned_text"
-                        android:layout_marginTop="16dp"/>
+                        app:layout_constraintTop_toBottomOf="@id/pinned_repo_list"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginStart="16dp"/>
 
                     <androidx.appcompat.widget.AppCompatTextView
                         android:layout_width="wrap_content"
@@ -107,7 +123,7 @@
                         app:layout_constraintTop_toTopOf="@id/ic_repository"
                         app:layout_constraintBottom_toBottomOf="@id/ic_repository"
                         tools:text="80"
-                        android:layout_marginStart="12dp"
+                        android:layout_marginEnd="16dp"
                         android:textColor="@color/color_text_gray"/>
 
                     <androidx.appcompat.widget.AppCompatImageView
@@ -117,7 +133,8 @@
                         android:background="@drawable/bg_icon_organisations"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/ic_repository"
-                        android:layout_marginTop="16dp"/>
+                        android:layout_marginTop="16dp"
+                        android:layout_marginStart="16dp"/>
 
                     <androidx.appcompat.widget.AppCompatTextView
                         android:layout_width="wrap_content"
@@ -137,7 +154,7 @@
                         app:layout_constraintTop_toTopOf="@id/ic_organisation"
                         app:layout_constraintBottom_toBottomOf="@id/ic_organisation"
                         tools:text="80"
-                        android:layout_marginStart="12dp"
+                        android:layout_marginEnd="16dp"
                         android:textColor="@color/color_text_gray"/>
 
                     <androidx.appcompat.widget.AppCompatImageView
@@ -147,7 +164,10 @@
                         android:background="@drawable/bg_icon_starred"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/ic_organisation"
-                        android:layout_marginTop="16dp"/>
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginBottom="16dp"/>
 
                     <androidx.appcompat.widget.AppCompatTextView
                         android:layout_width="wrap_content"
@@ -167,7 +187,7 @@
                         app:layout_constraintTop_toTopOf="@id/ic_starred"
                         app:layout_constraintBottom_toBottomOf="@id/ic_starred"
                         tools:text="80"
-                        android:layout_marginStart="12dp"
+                        android:layout_marginEnd="16dp"
                         android:textColor="@color/color_text_gray"/>
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </LinearLayout>
