--- a/app/src/nintendo/res/values/colors.xml
+++ b/app/src/nintendo/res/values/colors.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="nintendo_red">#FB0000</color>
+    <color name="color_text">#3C3C3C</color>
+    <color name="color_text_gray">#B4B4B4</color>
 </resources>
