--- a/app/src/nintendo/res/values/colors.xml
+++ b/app/src/nintendo/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="nintendo_red">#FB0000</color>
     <color name="color_text">#3C3C3C</color>
     <color name="color_text_gray">#B4B4B4</color>
+    <color name="color_unselected_tab_text">#B1B1B1</color>
 </resources>
